Closed
Bug 358741
Opened 19 years ago
Closed 19 years ago
Crash [@ nsListBoxBodyFrame::GetListItemContentAt]
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: smaug, Assigned: smaug)
References
Details
(Keywords: verified1.8.0.9, verified1.8.1.1)
Attachments
(3 files, 1 obsolete file)
|
147 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
8.48 KB,
patch
|
enndeakin
:
review+
roc
:
superreview+
dveditz
:
approval1.8.0.9+
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
|
8.64 KB,
patch
|
Details | Diff | Splinter Review |
TB shows some crashes @ nsListBoxBodyFrame::GetListItemContentAt.
I think the binding parent is null.
| Assignee | ||
Comment 1•19 years ago
|
||
Typical stack trace:
nsListBoxBodyFrame::GetListItemContentAt [mozilla/layout/xul/base/src/nsListBoxBodyFrame.cpp, line 1389]
nsListBoxBodyFrame::GetFirstItemBox [mozilla/layout/xul/base/src/nsListBoxBodyFrame.cpp, line 1143]
nsListBoxBodyFrame::CreateRows [mozilla/layout/xul/base/src/nsListBoxBodyFrame.cpp, line 1032]
nsListBoxBodyFrame::ReflowFinished [mozilla/layout/xul/base/src/nsListBoxBodyFrame.cpp, line 503]
| Assignee | ||
Comment 2•19 years ago
|
||
Need to still think a bit whether this makes sense :)
| Assignee | ||
Comment 3•19 years ago
|
||
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
| Assignee | ||
Updated•19 years ago
|
Version: 1.8 Branch → Trunk
| Assignee | ||
Updated•19 years ago
|
Attachment #244088 -
Attachment description: testcase → testcase (crashes on load)
| Assignee | ||
Comment 4•19 years ago
|
||
The 5th code hunk is just adding one new |if| around if-else. Otherwise
changes look as simple as they are.
Attachment #244085 -
Attachment is obsolete: true
Attachment #244090 -
Flags: review?(enndeakin)
Updated•19 years ago
|
Attachment #244090 -
Flags: review?(enndeakin) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #244090 -
Flags: superreview?(roc)
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.8.1.1?
Attachment #244090 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Updated•19 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•19 years ago
|
Attachment #244090 -
Flags: approval1.8.1?
Attachment #244090 -
Flags: approval1.8.0.9?
| Assignee | ||
Updated•19 years ago
|
Attachment #244090 -
Flags: approval1.8.1? → approval1.8.1.1?
Updated•19 years ago
|
Flags: blocking1.8.1.1?
Flags: blocking1.8.1.1+
Flags: blocking1.8.0.9+
Comment 5•19 years ago
|
||
Comment on attachment 244090 [details] [diff] [review]
proposed patch
approved for 1.8/1.8.0 branches, a=dveditz for drivers
Attachment #244090 -
Flags: approval1.8.1.1?
Attachment #244090 -
Flags: approval1.8.1.1+
Attachment #244090 -
Flags: approval1.8.0.9?
Attachment #244090 -
Flags: approval1.8.0.9+
Comment 6•19 years ago
|
||
*** Bug 321016 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•19 years ago
|
||
Comment 9•19 years ago
|
||
Verified Fixed for 1.8.0.9 and 1.8.1.1.
No Crash on Testcase
Tested with
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.1pre) Gecko/20061127 BonEcho/2.0.0.1pre
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.1pre) Gecko/20061127 BonEcho/2.0.0.1pre
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.0.9pre) Gecko/20061127 Firefox/1.5.0.9pre
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.0.9pre) Gecko/20061127 Firefox/1.5.0.9pre
and Fedora FC6
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.9pre) Gecko/20061127 Firefox/1.5.0.9pre
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1pre) Gecko/20061127 BonEcho/2.0.0.1pre
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•