Bug 358741, Crash [@ nsListBoxBodyFrame::GetListItemContentAt], r=enndeakin, sr=roc